# voxTrace

./: .buildinfo  .gitignore  CMakeLists.txt  Jupyter-UI.ipynb  LICENSE  Makefile  README.md  classes.html  genindex.html  index.html  installation.html  introduction.html  licence.html  objects.inv  pre-install.sh  search.html  searchindex.js  use.html
.github/workflows/: main.yml
_sources/: introduction.rst.txt  use.rst.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst  installation.rst  introduction.rst  licence.rst  use.rst
docs/rst/: classes.rst  index.rst  installation.rst  introduction.rst  licence.rst
hpc@vsc/: Hash-IPYNB.ipynb  memcheckResult  memcheckResult3  modules.sh  test.slrm
src/: CapillaryTracer.cpp  Main.cpp  SampleTracer.cpp  Test-1.cpp  Test-2.cpp  Test-3.cpp  Test-4.cpp  Tests.cpp
src/analytic/: SingleVoxel.cpp  SingleVoxel.h  VoxelQuant.cpp  VoxelQuant.h
src/api/: CMakeLists.txt  Optimizer.cpp  Optimizer.hpp  OptimizerAPI.cpp  OptimizerAPI.hpp  PlotAPI.cpp  PlotAPI.hpp  PolyCapAPI.cpp  PolyCapAPI.hpp  PolyCapAPIHelper.h  Shadow3API.cpp  Shadow3API.hpp  XRayLibAPI.cpp  XRayLibAPI.hpp
src/base/: CMakeLists.txt  ChemElement.cpp  ChemElement.hpp  Detector.cpp  Detector.h  Detector.hpp  Material.cpp  Material.h  Material.hpp  Ray.cpp  Ray.hpp  Sample.cpp  Sample.h  Sample.hpp  Source.cpp  Source.hpp  Voxel.cpp  Voxel.h  Voxel.hpp  XRBeam.cpp  XRBeam.hpp  XRSource.cpp  XRSource.hpp
src/cuda/: CMakeLists.txt  ChemElementGPU.cu  DetectorGPU.cu  GPUTracer.cu  GPUTracer.cuh  MaterialGPU.cu  MyDummy.cu  MyDummy.cuh  RayGPU.cu  SampleGPU.cu  TracerGPU.cu  TracerGPU.cuh  VoxelGPU.cu  a.out  add_cuda
src/cuda/temp_trash/: ChemElementGPU.cu  MaterialGPU.cu  RayGPU.cu  SampleGPU.cu  TracerTrash.cu  VoxelGPU.cu
src/io/: Scan.cpp  Scan.h  Scan.hpp  SimulationParameter.cpp  SimulationParameter.hpp
src/tests/: Main.cpp  Test-1.cpp
src/tracer/: CMakeLists.txt  PrimaryBeam.cpp  PrimaryBeam.hpp  Tracer.cpp  Tracer.h  Tracer.hpp
test-data/: Armadillo-Matrix-A.txt  Armadillo-Matrix-B.txt  pc-246.hdf5  sample.txt  start.00  test-data.ipynb
test-data/hpc@vsc/: GPU_Param  Untitled Document 1  checklist_vsc.chk  deviceQuery  help.txt  job.slrm  memCheckResult2
test-data/in/: GPU_Param
test-data/in/armadillo/: Armadillo-Matrix-A.txt  Armadillo-Matrix-B.txt
test-data/in/polycap/: pc-236-descr-turned.txt  pc-236-descr.txt  pc-236.hdf5  pc-246-descr.txt  source-descr.txt
test-data/in/shadow3/: start.00
test-data/in/shadow3-alternative/: start.01  start.02
test-data/in/simulation-parameter/: Capillaries.txt  Sample.txt  Simulation.txt
test-data/measurement/nist-1107/: 000034.spe  nist-1107-depth-00-00.txt  nist-1107-depth-00-01.txt  nist-1107-depth-01-00.txt
test-data/measurement/triple-cross/: Cr-Co-Zn-Kreuze-auf-pure-v15-depth-02.txt
test-data/polycap/: input.txt
test-data/simulation/nist-1107/: Capillaries.txt  Polycapillary.txt  Sample.txt  Simulation.txt
test-data/simulation/nist-1107/detector/: de-(x-0.0--y-0.0--z--10.0).h5  de-(x-0.0--y-0.0--z--20.0).h5  de-(x-0.0--y-0.0--z--30.0).h5  de-(x-0.0--y-0.0--z--40.0).h5  de-(x-0.0--y-0.0--z--50.0).h5  de-(x-0.0--y-0.0--z-0.0).h5  de-(x-0.0--y-0.0--z-10.0).h5  de-(x-0.0--y-0.0--z-20.0).h5  de-(x-0.0--y-0.0--z-30.0).h5  de-(x-0.0--y-0.0--z-40.0).h5  de-(x-0.0--y-0.0--z-50.0).h5
test-data/simulation/triple-cross/: Capillaries.txt  Sample.txt  Simulation.txt  Source.txt
test-data/simulation/triple-cross/detector/: de-(x-0.0--y0.0--z--15.0).h5  de-(x-0.0--y0.0--z--30.0).h5  de-(x-0.0--y0.0--z--45.0).h5  de-(x-0.0--y0.0--z-0.0).h5  de-(x-0.0--y0.0--z-105.0).h5  de-(x-0.0--y0.0--z-120.0).h5  de-(x-0.0--y0.0--z-135.0).h5  de-(x-0.0--y0.0--z-15.0).h5  de-(x-0.0--y0.0--z-30.0).h5  de-(x-0.0--y0.0--z-45.0).h5  de-(x-0.0--y0.0--z-60.0).h5  de-(x-0.0--y0.0--z-75.0).h5  de-(x-0.0--y0.0--z-90.0).h5
